--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 		<a>HBuilder的发展背景：国产的，支持HTML5的WEB开发工具，支持多种语言。</a>
 		<a>HBuilder的优势：开启速度快，支持边改边看，界面改变更随意。</a>
 		<a>HBuilder的使用方法：开启速度快，支持边改边看，界面改变更随意。</a>
-		<a herf=“http://www.tietuku.com/static/image/icon1.png”>图片</a>
+		<a herf="http://www.tietuku.com/static/image/icon1.png">图片</a>
 	</body>
 </html>
