--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
 		<meta charset="utf-8" />
 		<title>2017/1/9-周静雯-软件介绍总结</title>
 		<script src="" type="text/javascript" charset="utf-8"></script>
+		<style>
+		*{margin: 0;padding: 0;}
+			.box{
+				width: 900px;
+				margin: 0 auto;
+				border: 3px solid black;
+			}
+		</style>
 	</head>
 	<body>
+		<div class="box">
 		<h1>2017/1/9-周静雯-软件介绍总结</h1>
-		<p>HBuilder</p>
-		<a>HBuilder的发展背景：国产的，支持HTML5的WEB开发工具，支持多种语言。</a>
-		<a>HBuilder的优势：开启速度快，支持边改边看，界面改变更随意。</a>
-		<a>HBuilder的使用方法：开启速度快，支持边改边看，界面改变更随意。</a>
-		<a href="http://www.tietuku.com/static/image/icon1.png">图片</a>
+		<p>1.HBuilder</p>
+            <a href="HBuildercontext.html">HBuilder的发展背景</a>
+            <a href="HBuildergoodness.html">HBuilder的优势</a>
+            <a href="HBuilderinstall.html">HBuilder的使用方法</a>
+        <p>2.码云</p>
+            <a href="HBuildercontext.html">码云的发展背景</a>
+            <a href="HBuildergoodness.html">码云的优势</a>
+            <a href="HBuilderinstall.html">码云的使用方法</a>
+        <p>3.GitHub</p>
+            <a href="HBuildercontext.html">GitHub的发展背景</a>
+            <a href="HBuildergoodness.html">GitHub的优势</a>
+            <a href="HBuilderinstall.html">GitHub的使用方法</a>
+		</div>
 	</body>
 </html>
+
