--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 				width: 900px;
 				margin: 0 auto;
 				border: 3px solid black;
+                                border-radius: 50%;
+                                height: 400px;
 			}
 		</style>
 	</head>
