--- a/index.html
+++ b/index.html
@@ -7,29 +7,40 @@
 		<style>
 		*{margin: 0;padding: 0;}
 			.box{
-				width: 900px;
+				width: 850px;
 				margin: 0 auto;
 				border: 3px solid black;
-                                border-radius: 90%;
-                                height: 400px;
+                border-radius: 50px;
+                height: 500px;
+                background-color: antiquewhite;
+                padding-left: 50px;
 			}
+        .box>a{
+            display: block;
+            height: 30px;
+            line-height: 30px;
+            width: 200px;
+            background-color: antiquewhite;
+            color: #333;
+            text-decoration: none;
+            cursor: pointer;
+            margin: 20px 0;
+        }
+        .box>a:hover{
+            text-decoration: underline;
+        }
 		</style>
 	</head>
 	<body>
 		<div class="box">
-		<h1>2017/1/9-周静雯-软件介绍总结</h1>
-		<p>1.HBuilder</p>
-            <a href="HBuildercontext.html">HBuilder的发展背景</a>
-            <a href="HBuildergoodness.html">HBuilder的优势</a>
-            <a href="HBuilderinstall.html">HBuilder的使用方法</a>
-        <p>2.码云</p>
-            <a href="HBuildercontext.html">码云的发展背景</a>
-            <a href="HBuildergoodness.html">码云的优势</a>
-            <a href="HBuilderinstall.html">码云的使用方法</a>
-        <p>3.GitHub</p>
-            <a href="HBuildercontext.html">GitHub的发展背景</a>
-            <a href="HBuildergoodness.html">GitHub的优势</a>
-            <a href="HBuilderinstall.html">GitHub的使用方法</a>
+		<h1 style="margin: 0 auto;">2017/1/9-周静雯-软件介绍总结</h1>
+
+		<a href="HBuilder.html">1.HBuilder</a>
+
+                <a href="Mayun.html">2.码云</a>
+
+                <a href="GitHub.html">3.GitHub</a>
+
 		</div>
 	</body>
 </html>
