--- a/HBuilder.html
+++ b/HBuilder.html
@@ -49,7 +49,7 @@
             <p>1.飞快的编码速度</p>
             <p>2.HBuilder直接创建移动App，打包为ios或Android原生安装包</p>
             <p>3.HTML5语法、HTML5+语法、三大浏览器扩展语法，尽收HBuilder中</p>
-            <p>4.绿柔设置界面，更加护眼</p>
+            <p>4.绿色界面，更加护眼</p>
             <p>5.无死角提示：除了语法，还能提示ID、Class、图片、链接、字体…</p>
             <p>6.边改边看：一边写代码，一边看效果</p>
             <p>7.内置emmet：tab一下生成一串代码</p>
