--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>2017/1/9-周静雯-软件介绍总结</title>
+		<title>2017/1/9-周静雯-工具总结</title>
 		<script src="" type="text/javascript" charset="utf-8"></script>
 		<style>
 		*{margin: 0;padding: 0;}
