--- a/HBuilder.html
+++ b/HBuilder.html
@@ -6,16 +6,16 @@
 		<script src="" type="text/javascript" charset="utf-8"></script>
 		<style>
 		*{margin: 0;padding: 0;}
-			.box{
-                width: 850px;
+	.box{
+                width: 800px;
                 margin: 0 auto;
                 border: 3px solid black;
                 border-radius: 50px;
                 height: 480px;
                 background-color: antiquewhite;
-                padding-left: 50px;
-                padding-top: 20px;
-			}
+                padding:20px 50px 0 50px;
+               
+	}
         .box>p{
             font-size: 14px;
             font-family: "微软雅黑";
