--- a/Mayun.html
+++ b/Mayun.html
@@ -7,14 +7,14 @@
     <style>
         *{margin: 0;padding: 0;}
         .box{
-            width: 850px;
+            width: 800px;
             margin: 0 auto;
             border: 3px solid black;
             border-radius: 50px;
             height: 480px;
             background-color: antiquewhite;
-            padding-left: 50px;
-            padding-top: 20px;
+            padding:20px 50px 0 50px;
+           
         }
         .box>p{
             font-size: 14px;
