--- a/Mayun.html
+++ b/Mayun.html
@@ -43,7 +43,7 @@
 <body>
 <div class="box">
     <h1>码云</h1>
-    <a>码云(Git@OSC)是开源中国社区团队推出的基于Git的快速的、免费的、稳定的在线代码托管平台,不限制私有库和公有库数量.</a>
+    <a>码云是开源中国社区团队推出的基于Git的快速的、免费的、稳定的在线代码托管平台,不限制私有库和公有库数量.</a>
 
     <a>码云优势</a>
     <p>在国内访问速度比github快很多，可以免费让自己的仓库他人不可见。</p>
