--- a/HBuilder.html
+++ b/HBuilder.html
@@ -33,7 +33,7 @@
             color: #333;
             height: 30px;
             line-height: 30px;
-            width: 150px;
+            width: 100%;
             margin: 10px 0;
             background-color: burlywood;
         }
