--- a/GitHub.html
+++ b/GitHub.html
@@ -2,19 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>2017/1/9-周静雯-软件介绍总结</title>
+    <title>2017/1/9-周静雯-工具介绍总结</title>
     <script src="" type="text/javascript" charset="utf-8"></script>
     <style>
-        *{margin: 0;padding: 0;}
+        *{margin: 0;padding: 0;background-color: #010101;}
         .box{
             width: 800px;
             margin: 0 auto;
             border: 3px solid black;
             border-radius: 50px;
-            height: 480px;
             background-color: antiquewhite;
             padding:20px 50px 0 50px;
-         
         }
         .box>p{
             font-size: 14px;
@@ -23,6 +21,7 @@
             width: 100%;
             height: 40px;
             line-height: 40px;
+            background-color: antiquewhite;
 
         }
         .box>a{
@@ -37,20 +36,39 @@
             margin: 10px 0;
             background-color: burlywood;
         }
+        img{
+        	max-width:800px ;
+        }
 
     </style>
 </head>
 <body>
 <div class="box">
-    <h1>GitHub - 飞速编码的极客工具</h1>
+    <h1 style="background-color: antiquewhite;">GitHub - 飞速编码的极客工具</h1>
     <a>GitHub提供Git存储库服务，基于web，允许你使用Git的源代码管理功能，或者其特性。</a>
 
-    <a>HBuilder优势</a>
-
+    <a>GitHub优势</a>
     <p>1.它可以作为一个版本控制系统和协作工具，用它来发布工作。</p>
     <p>2.可以将项目存档，与其他人分享交流，并让其他开发者帮助你一起完成这个项目，支持多人共同完成一个项目。</p>
     <p>3.创建自己的项目，并备份，代码不需要保存在本地或者服务器。</p>
     <p>4.在GitHub页面，你可以直接开始，而不需要设置主机或者DNS。</p>
+    <a>GitHub的操作</a>
+    <p>1.注册一个账号</p>
+    <img src="img/92828.png"/>
+    <p>2.登录之后新建文件</p>
+    <img src="img/92623.png"/>
+    <p>3.输入文件名（建议英文），然后就可以在下面输入你的代码,最后点击确认就可以了。</p>
+    <img src="img/3500.png"/>
+    <p>4.点击Setting,往下拉，输入你的项目名称+.github.io</p>
+    <img src="img/4224.png"/>
+    <p>5.还可以在Setting里找到你的网址。</p>
+    <img src="img/94438.png"/>
+    <p>6.还可以在Setting里删除你的文件。</p>
+    <img src="img/94554.png"/>
+    <p>7.GitHub的网页优先显示index.html。</p>
+    <img src="img/92657.png"/>
+    <p>8.GitHub还可以上传本地文件，文件夹要从客户端上传。</p>
+    <img src="img/95000.png"/>
 </div>
 </body>
 </html>
