--- a/HBuilder.html
+++ b/HBuilder.html
@@ -5,17 +5,15 @@
 		<title>2017/1/9-周静雯-软件介绍总结</title>
 		<script src="" type="text/javascript" charset="utf-8"></script>
 		<style>
-		*{margin: 0;padding: 0;}
-	.box{
+		*{margin: 0;padding:0;background-color: #010101;}
+		.box{
                 width: 800px;
-                margin: 0 auto;
+                margin: 10px auto 0; 
                 border: 3px solid black;
                 border-radius: 50px;
-                height: 480px;
                 background-color: antiquewhite;
                 padding:20px 50px 0 50px;
-               
-	}
+			}
         .box>p{
             font-size: 14px;
             font-family: "微软雅黑";
@@ -23,7 +21,8 @@
             width: 100%;
             height: 40px;
             line-height: 40px;
-
+            margin: 5px 0;
+            background-color: antiquewhite;
         }
         .box>a{
             display: block;
@@ -33,26 +32,43 @@
             color: #333;
             height: 30px;
             line-height: 30px;
-            width: 100%;
+            width: 100%
             margin: 10px 0;
             background-color: burlywood;
+        }
+        img{
+        	max-width:800px ;
         }
 
 		</style>
 	</head>
 	<body>
 		<div class="box">
-            <h1>HBuilder - 飞速编码的极客工具</h1>
+            <h1 style="background-color: antiquewhite;">HBuilder - 飞速编码的极客工具</h1>
 
             <a>HBuilder优势</a>
 
             <p>1.飞快的编码速度</p>
             <p>2.HBuilder直接创建移动App，打包为ios或Android原生安装包</p>
             <p>3.HTML5语法、HTML5+语法、三大浏览器扩展语法，尽收HBuilder中</p>
-            <p>4.绿色界面，更加护眼</p>
+            <p>4.绿柔设置界面，更加护眼</p>
             <p>5.无死角提示：除了语法，还能提示ID、Class、图片、链接、字体…</p>
             <p>6.边改边看：一边写代码，一边看效果</p>
             <p>7.内置emmet：tab一下生成一串代码</p>
+            
+            <a>HBuilder特色功能</a>
+            <p>1.单击左上角的“加号”，选择新建web，除了生成html文件，HBuilder还会自动生成img、css、js三个文件夹</p>
+            <img src="img/85431.png"/>
+            <p>2.可以通过工具栏选项或滚动鼠标滚轮快速调整代码字体大小</p>
+            <img src="img/3806.png"/>
+            <p>3.强大的快捷键功能，还可以在右侧输入框输入想实现的功能进行快捷键搜索</p>
+            <img src="img/3054.png"/>
+            <p>4.写img代码时，会自动显示图片，图片名称和图片大小</p>
+            <img src="img/4655.png"/>
+            <p>5.支持边看边改，在右上角选择边看边改模式，可以快速看到网页的样式(不要忘记先保存代码再看网页，快捷键：Ctrl+Shift+s))。</p>
+            <img src="img/83354.png"/>
+            <br />
+            <img src="img/83444.png"/>
         </div>
 	</body>
 </html>
