--- a/Mayun.html
+++ b/Mayun.html
@@ -5,16 +5,14 @@
     <title>2017/1/9-周静雯-软件介绍总结</title>
     <script src="" type="text/javascript" charset="utf-8"></script>
     <style>
-        *{margin: 0;padding: 0;}
+        *{margin: 0;padding: 0;background-color: #010101;}
         .box{
             width: 800px;
             margin: 0 auto;
             border: 3px solid black;
             border-radius: 50px;
-            height: 480px;
             background-color: antiquewhite;
             padding:20px 50px 0 50px;
-           
         }
         .box>p{
             font-size: 14px;
@@ -23,30 +21,44 @@
             width: 100%;
             height: 40px;
             line-height: 40px;
+            background-color: antiquewhite;
 
         }
         .box>a{
             display: block;
             font-size: 15px;
             font-weight: 600;
-            font-family: "微软雅黑";
+            font-family: 微软雅黑;
             color: #333;
-            height: 30px;
             line-height: 30px;
             width: 100%;
             margin: 10px 0;
             background-color: burlywood;
+            word-wrap: break-word;  /*自动换行*/
+        }
+        img{
+        	max-width:800px ;
         }
 
     </style>
 </head>
 <body>
 <div class="box">
-    <h1>码云</h1>
-    <a>码云是开源中国社区团队推出的基于Git的快速的、免费的、稳定的在线代码托管平台,不限制私有库和公有库数量.</a>
+    <h1 style="background-color: antiquewhite;">码云</h1>
+    <a>码云(Git@OSC)是开源中国社区团队推出的基于Git的快速的、免费的、稳定的在线代码托管平台,不限制私有库和公有库数量。大致结构和GitHub相似。</a>
 
     <a>码云优势</a>
     <p>在国内访问速度比github快很多，可以免费让自己的仓库他人不可见。</p>
+    
+    <a>码云的操作</a>
+    <p>1.注册一个账号</p>
+    <img src="img/95515.png"/>
+    <p>2.登录之后新建项目</p>
+    <img src="img/95758.png"/>
+    <p>3.码云还可以上传本地文件，文件夹要从客户端上传</p>
+    <img src="img/100323.png"/>
+    <p>4.可以在左侧查看自己的项目。</p>
+    <img src="img/224.png"/>
 
 
 </div>
