--- a/index.html
+++ b/index.html
@@ -2,46 +2,123 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>2017/1/9-周静雯-工具总结</title>
+		<title>2017/1/9-周静雯-软件介绍总结</title>
 		<script src="" type="text/javascript" charset="utf-8"></script>
 		<style>
-		*{margin: 0;padding: 0;}
-			.box{
+		*{margin: 0;padding: 0;list-style: none;background-color: #010101;}
+		.top{
+			width: 100%;
+			height: 130px;
+			background: url(img/TOP0.jpg) no-repeat;
+			background-position: calc((100% - 550px) / 2)  -85px;
+			background-color: #010101;
+		}
+		.box{
 				width: 850px;
 				margin: 0 auto;
 				border: 3px solid black;
-                border-radius: 50px;
-                height: 500px;
-                background-color: antiquewhite;
-                padding-left: 50px;
+				border-top:0 ;
+                border-radius:0 0 50px 50px;
+                height: 1000px;
+                background:url(img/timg.jpg) no-repeat;
+        	    background-size:100% 100% ;
 			}
-        .box>a{
+        .mian1>a{
             display: block;
             height: 30px;
             line-height: 30px;
             width: 200px;
-            background-color: antiquewhite;
+            background-color:#fff7c8 ;
             color: #333;
             text-decoration: none;
             cursor: pointer;
-            margin: 20px 0;
+            margin: 7px 0 0;
         }
-        .box>a:hover{
+        .mian1>a:hover{
             text-decoration: underline;
         }
+        .mian1{
+        	width: 280px;
+        	height: 140px;
+            float: left;
+            border: 3px solid #333;
+            border-radius: 7px;
+            box-shadow: 0 0 3px #333;
+            background-color: #fff7c8;
+            margin:30px 0 0 80px;
+            padding: 10px 0 0 20px;
+
+        }
+        .mian1>p{
+            color:#343434;
+            background-color:#fff7c8 ;
+        }
+        ul{
+        	width: 850px;
+        	height: 30px;
+        	background-color: #f7cdd1;
+        }
+        li{
+        	width: 150px;
+        	text-align: center;
+        	height: 30px;
+        	line-height: 30px;
+        	font-family: "微软雅黑";
+        	font-size: 15px;
+        	color: #010101;
+        	font-weight: 800;
+        	background-color: #f7cdd1;
+        	float: left;
+        	cursor: pointer;
+        }
+        
 		</style>
 	</head>
 	<body>
+		<div class="top"></div>
 		<div class="box">
-		<h1 style="margin: 0 auto;">2017/1/9-周静雯-软件介绍总结</h1>
+			<ul>
+			  <li>2017/01/09</li>
+			  <li>2017/01/10</li>
+			  <li>2017/01/11</li>
+			  <li>2017/01/12</li>
+            </ul>
+			<div class="mian1">
+                <p >2017/01/09-周静雯-工具介绍总结</p>
 
-		<a href="HBuilder.html">1.HBuilder</a>
+                <a href="HBuilder.html">1.HBuilder</a>
 
                 <a href="Mayun.html">2.码云</a>
 
                 <a href="GitHub.html">3.GitHub</a>
+            </div>
+            <div class="mian1">
+                <p >2017/01/10总结</p>
 
+                <a href="">1.XXX</a>
+
+                <a href="">2.XXX</a>
+
+                <a href="">3.XXX</a>
+            </div>
+            <div class="mian1">
+                <p >2017/01/11总结</p>
+
+                <a href="">1.XXX</a>
+
+                <a href="">2.XXX</a>
+
+                <a href="">3.XXX</a>
+            </div>
+            <div class="mian1">
+                <p >2017/01/11总结</p>
+
+                <a href="">1.XXX</a>
+
+                <a href="">2.XXX</a>
+
+                <a href="">3.XXX</a>
+            </div>
 		</div>
 	</body>
 </html>
-
