--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 				border: 3px solid black;
 				border-top:0 ;
                 border-radius:0 0 50px 50px;
-                height: 1000px;
+                height: 800px;
                 background:url(img/timg.jpg) no-repeat;
         	    background-size:100% 100% ;
 			}
-        .mian1>a{
+        .mian>a{
             display: block;
             height: 30px;
             line-height: 30px;
@@ -34,12 +34,12 @@
             cursor: pointer;
             margin: 7px 0 0;
         }
-        .mian1>a:hover{
+        .mian>a:hover{
             text-decoration: underline;
         }
-        .mian1{
+        .mian{
         	width: 280px;
-        	height: 140px;
+        	height: 170px;
             float: left;
             border: 3px solid #333;
             border-radius: 7px;
@@ -49,9 +49,9 @@
             padding: 10px 0 0 20px;
 
         }
-        .mian1>p{
+        .mian>p{
             color:#343434;
-            background-color:#fff7c8 ;
+            background-color:#fff7c8;
         }
         ul{
         	width: 850px;
@@ -83,7 +83,7 @@
 			  <li>2017/01/11</li>
 			  <li>2017/01/12</li>
             </ul>
-			<div class="mian1">
+			<div class="mian">
                 <p >2017/01/09-周静雯-工具介绍总结</p>
 
                 <a href="HBuilder.html">1.HBuilder</a>
@@ -92,16 +92,18 @@
 
                 <a href="GitHub.html">3.GitHub</a>
             </div>
-            <div class="mian1">
-                <p >2017/01/10总结</p>
+            <div class="mian">
+                <p >2017/01/10 js回顾总结</p>
 
-                <a href="">1.XXX</a>
+                <a href="Month1Day10/base.html">1.JS基础</a>
 
-                <a href="">2.XXX</a>
+                <a href="Month1Day10/function.html">2.函数的声明</a>
 
-                <a href="">3.XXX</a>
+                <a href="">3.this指向</a>
+
+                <a href="">4.作用域</a>
             </div>
-            <div class="mian1">
+            <div class="mian">
                 <p >2017/01/11总结</p>
 
                 <a href="">1.XXX</a>
@@ -110,8 +112,8 @@
 
                 <a href="">3.XXX</a>
             </div>
-            <div class="mian1">
-                <p >2017/01/11总结</p>
+            <div class="mian">
+                <p >2017/01/12总结</p>
 
                 <a href="">1.XXX</a>
 
