--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 
                 <a href="Month1Day10/function.html">2.函数的声明</a>
 
-                <a href="">3.this指向</a>
+                <a href="Month1Day10/this.html">3.this指向</a>
 
-                <a href="">4.作用域</a>
+                <a href="Month1Day10/work.html">4.作用域</a>
             </div>
             <div class="mian">
                 <p >2017/01/11总结</p>
