--- a/Month1Day10/this.html
+++ b/Month1Day10/this.html
@@ -11,7 +11,7 @@
             border: 3px solid black;
             border-radius: 50px;
             background-color: antiquewhite;
-            padding:20px 50px 0 50px;
+            padding:20px 50px 20px 50px;
         }
         .box>p{
             font-size: 14px;
