--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>2017/1/9-周静雯-软件介绍总结</title>
+		<title>每日总结</title>
 		<script src="" type="text/javascript" charset="utf-8"></script>
 		<style>
 		*{margin: 0;padding: 0;list-style: none;background-color: #010101;}
@@ -104,13 +104,10 @@
                 <a href="Month1Day10/work.html">4.作用域</a>
             </div>
             <div class="mian">
-                <p >2017/01/11总结</p>
+                <p >2017/01/11 原型与原型链</p>
 
-                <a href="">1.XXX</a>
+                <a href="proto.html">1.原型与原型链</a>
 
-                <a href="">2.XXX</a>
-
-                <a href="">3.XXX</a>
             </div>
             <div class="mian">
                 <p >2017/01/12总结</p>
