--- a/Month1Day10/base.html
+++ b/Month1Day10/base.html
@@ -58,12 +58,12 @@
 
     <p>1.值类型：string，object，number，undefine，null。<br/>&nbsp;&nbsp;&nbsp;引用类型：功能，对象，数组。</p>
     <p>2.for循环(用于遍历数组)。
-       <!-- <code>
+        <code>
             var a = ['1','3','6'];
             for(var i= 0;i<a.length;i++){
             console.log(a[i])
             }
-        </code>-->
+        </code>
     <p>for in遍历伪数组argument(有数组的形式，但是不能使用数组的方法。)
    <!-- <code>
        var a = [1,3,6];
