--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 
             </div>
             <div class="mian">
-                <p >2017/01/12总结</p>
+                <p >2017/01/12 </p>
 
-                <a href="">1.XXX</a>
+                <a href="Month1Day12/event.html">1.JS Array,Event,排序回顾</a>
 
-                <a href="">2.XXX</a>
+                <a href="Month1Day12/error.html">2.Error对象</a>
 
-                <a href="">3.XXX</a>
+                <a href="">3.触摸事件</a>
             </div>
 		</div>
 	</body>
