--- a/Month1Day12/touch.html
+++ b/Month1Day12/touch.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>JavaScript回顾</title>
+    <title>触屏事件</title>
     <style>
         *{margin: 0;padding: 0;background-color: #010101;}
         .box{
@@ -19,7 +19,6 @@
             font-weight: 600;
             font-family: "微软雅黑";
             color: #333;
-            height: 30px;
             line-height: 30px;
             width: 100%;
             margin: 10px 0;
@@ -38,6 +37,7 @@
             display: block;
             height: auto;
             width: 100%;
+            font-size: 16px;
             color: #333;
             background-color:#f6f6f6;
             line-height: 2em;
@@ -53,63 +53,42 @@
 </head>
 <body>
 <div class="box">
-    <h1 style="background-color: antiquewhite;font-size: 28px">JS Array,Event,排序回顾</h1>
-    <a>Array</a>
-    <p></p>
-    <a></a>
+    <h1 style="background-color: antiquewhite;font-size: 28px">touch事件</h1>
+    <a>1.四种touch事件</a>
+    <p>touchstart: //手指放到屏幕上时触发<br/>
+        touchmove: //手指在屏幕上滑动式触发<br/>
+        touchend: //手指离开屏幕时触发<br/>
+        touchcancel: //系统取消touch事件的时候触发，这个好像比较少用   <br/>
+        注意：在touchmove中需要禁止浏览器的默认动作，否则会影响到touchmove的触发，尤其是在android中，iphone对这个处理的较好，影响较小。<br/>
+        e.touches表示的在屏幕上所有的触摸点，但事实上，绝大数手机浏览器并不支持多点触摸，所有用e.touchees[0]捕获一个触点。
+    </p>
+    <a>2.每个touch对象的属性：</a>
+    <p>
+        clientX / clientY: //触摸点相对浏览器窗口的位置<br/>
+        pageX / pageY: //触摸点相对于页面的位置<br/>
+        screenX / screenY: //触摸点相对于屏幕的位置 <br/>
+        target：触摸的DOM节点目标。<br/>
+        identifier：标识触摸的唯一ID。   <br/>
+    </p>
+    <a>2.1例如</a>
     <code>
-        a = new Array(1,2,3);  <br/>
-        b = "JScript";  <br/>
-        c = new Array(42, "VBScript");  <br/>
-        d = a.concat( c);  //返回一个新数组，这个新数组是由两个或更多数组组合而成的。  <br/>
-        e = [1, 2, 3, "JScript", 42, "VBScript"]  //数组里可以盛放各种类型的数据   <br/>
-        document.write(d); //1,2,3,42,VBScript <br/>
-
-        document.write(a.pop()); //pop()移除数组中的最后一个元素并返回该元素。  <br/>
-
-        a.shift(2);//移除数组中的第一个元素并返回该元素。  <br/>
-
-        a.slice(0, -2); //slice 方法一直复制到end所指定的元素，但是不包括该元素。如果start为负，将它作为length+start处理，此处length 为数组的长度。如果end为负，就将它作为 length + end 处理，此处 length 为数组的长度。如果省略 end ，那么 slice 方法将一直复制到 arrayObj 的结尾。如果 end 出现在 start 之前，不复制任何元素到新数组中。
-        <br/>
-        a.sort(); //实现数组的'从小到大'排序,但不是正常排序且占资源，不推荐<br/>
-        a.reverse();  //将数组倒转eg：[1,5,3,2] ---[2,3,5,1]  <br/>
-        a.splice(1,2,3);  //移除数组里从下标1开始的2数，并用3代替，，，，括号最后一个数3可写可不写
+        EventUtil.addHandler(div,"touchstart",function(event){   <br/>
+        div.innerHTML=event.touches[0].clientX+','+event.touches[0].clientY;   <br/>
+        });   <br/>
+        EventUtil.addHandler(div,"touchmove",function(event){   <br/>
+        event.preventDefault();   <br/>
+        div.innerHTML=event.touches[0].clientX;   <br/>
+        });   <br/>
+        EventUtil.addHandler(div,"touchend",function(event){   <br/>
+        div.innerHTML=event.changedTouches[0].clientY;   <br/>
+        });
     </code>
-    <a>Event对象</a>
-    <p>preventDefault()  取消浏览器默认行为</p>
-    <p>currenttarget：当处于捕获和冒泡阶段的时候，currentTarget指向当前事件活动的对象（一般为父级）</p>
-    <p>target：当处于捕获和冒泡阶段的时候，target指向被单击的对象</p>
-    <code>
-        mc1.addChild(mc2); <br/>
-        mc1.addEventListener(MouseEvent.CLICK,doit1); <br/>
-        function doit1(e){ <br/>
-        trace(e.target.name);//点击mc2,输出 mc2 <br/>
-        trace(e.currentTarget.name);//点击mc2,输出 mc1 <br/>
-        } <br/>
-        mc2.addEventListener(MouseEvent.CLICK,doit2); <br/>
-        function doit2(e){ <br/>
-        trace(e.target.name);//点击mc2,输出 mc2 <br/>
-        trace(e.currentTarget.name);//点击mc2,输出 mc2  <br/>
-        }
-    </code>
-    <a>插入排序</a>
-    <p>最短时间：n；最长时间：n^2；</p>
-    <code>
-        function insertSortArray(sort_Array,x){         //一趟排序的算法  <br/>
-        for(var i=0;<!--i<sort_Array.length-->;i++){  <br/>
-        if(sort_array[i]>=x){                    //找到插入点  <br/>
-        for (var j=sort_array.length; j>i; j--){   //后挪空出位置  <br/>
-        sort_array[j]=sort_array[j-1]  <br/>
-        }  <br/>
-        sort_array[i]=x;                             //插入  <br/>
-        break;                                      //任务结束，退出循环  <br/>
-        }  <br/>
-        }  <br/>
-        return sort_array;                                      //返回处理后的数组  <br/>
-        }
-    </code>
-
-
+    <a>注意：手指在滑动整个屏幕时，会影响浏览器的行为，比如滚动和缩放。所以在调用touch事件时，要注意禁止缩放和滚动。</a>
+    <p>1.禁止缩放   <br/>
+        通过meta元标签来设置。   <br/>
+        2.禁止滚动   <br/>
+        preventDefault是阻止默认行为，touch事件的默认行为就是滚动。   <br/>
+        event.preventDefault();</p>
 </div>
 
 </body>
