--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <a href="Month1Day12/error.html">2.Error对象</a>
 
-                <a href="">3.触摸事件</a>
+                <a href="Month1Day12/touch.html">3.触摸事件</a>
             </div>
 		</div>
 	</body>
