--- a/index.html
+++ b/index.html
@@ -85,39 +85,38 @@
             </ul>
 			<div class="mian">
                 <p >2017/01/09-周静雯-工具介绍总结</p>
-
                 <a href="HBuilder.html">1.HBuilder</a>
-
                 <a href="Mayun.html">2.码云</a>
-
                 <a href="GitHub.html">3.GitHub</a>
             </div>
             <div class="mian">
                 <p >2017/01/10 js回顾总结</p>
-
                 <a href="Month1Day10/base.html">1.JS基础</a>
-
                 <a href="Month1Day10/function.html">2.函数的声明</a>
-
                 <a href="Month1Day10/this.html">3.this指向</a>
-
                 <a href="Month1Day10/work.html">4.作用域</a>
             </div>
             <div class="mian">
                 <p >2017/01/11 原型与原型链</p>
-
                 <a href="proto.html">1.原型与原型链</a>
-
             </div>
             <div class="mian">
                 <p >2017/01/12 </p>
-
                 <a href="Month1Day12/event.html">1.JS Array,Event,排序回顾</a>
-
                 <a href="Month1Day12/error.html">2.Error对象</a>
-
                 <a href="Month1Day12/touch.html">3.触摸事件</a>
             </div>
+            <div class="mian">
+                <p >2017/01/13 </p>
+                <a href="Month1Day13/Month1Day13canves.html">Canves 画布</a>
+            </div>
+            <div class="mian">
+                <p >2017/01/16 </p>
+                <a href="Month1Day16/Day16canves.html">1.Canves 续</a>
+                <a href="Month1Day12/">2.audio</a>
+                <a href="Month1Day12/">3.video</a>
+            </div>
+
 		</div>
 	</body>
 </html>
