--- a/Month1Day10/base.html
+++ b/Month1Day10/base.html
@@ -11,8 +11,7 @@
             border: 3px solid black;
             border-radius: 50px;
             background-color: antiquewhite;
-            padding:20px 50px 0 50px;
-            height: 900px;
+            padding:20px 50px 20px 50px;
         }
         .box>a{
             display: block;
@@ -57,47 +56,43 @@
     <h1 style="background-color: antiquewhite;font-size: 28px">JavaScript———动态的基于对象，基于事件驱动的脚本语言</h1>
 
     <p>1.值类型：string，object，number，undefine，null。<br/>&nbsp;&nbsp;&nbsp;引用类型：功能，对象，数组。</p>
-    <p>2.for循环(用于遍历数组)。
+    <p>2.for循环(用于遍历数组)。</p>
         <code>
-            var a = ['1','3','6'];
-            for(var i= 0;i<a.length;i++){
-            console.log(a[i])
+            var a = ['1','3','6'];<br/>
+            for(var i= 0;i< a.length;i++){<br/>
+            console.log(a[i])<br/>
             }
         </code>
-    <p>for in遍历伪数组argument(有数组的形式，但是不能使用数组的方法。)
-   <!-- <code>
-       var a = [1,3,6];
-      &lt;!&ndash;  for(var i = 0;i<a.length;i++){
-        console.log(array[i])
-       }&ndash;&gt;
-    </code>-->
-   </p>
+    <p>for in遍历伪数组argument(有数组的形式，但是不能使用数组的方法。)</p>
+   <code>
+       var a = [1,3,6];<br/>
+       for(var i = 0;i< a.length;i++){<br/>
+        console.log(array[i])<br/>
+       }
+    </code>
+
     <a>创建对象的方法：</a>
     <code>
-        var obj = new Object();
-    </code>
-    <code>
-        var obj = {a=1,b=2};
-    </code>
-    <code>
-        function Obj(){
-        this.a = a;
-        this.b = b;
+        var obj = new Object();<br/>
+        var obj = {a=1,b=2};<br/>
+        function Obj(){<br/>
+        this.a = a;<br/>
+        this.b = b;<br/>
         }
     </code>
     <a>必考题(数组去重)：</a>
     <code>
-        <!--var arr = [0,2,6,8,2,7,6,9]
-        var  arr1 =[];
-        var num = arr.length;
-        for(var n = 0;n<num;n++)
-        {
-        if(arr.indexOf(arr[n])==(-1))
-        {
-        arr1.push(arr[n]);
-        }
-        }
-        alert(arr1)-->
+        var arr = [0,2,6,8,2,7,6,9]<br/>
+        var  arr1 =[];<br/>
+        var num = arr.length;<br/>
+        for(var n = 0;n< num;n++)<br/>
+        {<br/>
+        if(arr.indexOf(arr[n])==(-1))<br/>
+        {<br/>
+        arr1.push(arr[n]);<br/>
+        }<br/>
+        }<br/>
+        alert(arr1)
     </code>
 
 
