--- a/index.html
+++ b/index.html
@@ -111,11 +111,15 @@
                 <a href="Month1Day13/Month1Day13canves.html">Canves 画布</a>
             </div>
             <div class="mian">
-                <p >2017/01/16 </p>
-                <a href="Month1Day16/Day16canves.html">1.Canves 续</a>
-                <a href="Month1Day12/">2.audio</a>
-                <a href="Month1Day12/">3.video</a>
+            <p >2017/01/16 </p>
+            <a href="Month1Day16/Day16canves.html">1.Canves 续</a>
             </div>
+            <div class="mian">
+                <p >2017/01/17 音频和视频 </p>
+                <a href="Month1Day17/audio.html">1.audio</a>
+                <a href="Month1Day17/video.html">2.video</a>
+            </div>
+
 
 		</div>
 	</body>
