--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				border: 3px solid black;
 				border-top:0 ;
                 border-radius:0 0 50px 50px;
-                height: auto;
+                height: 1200px;
                 background:url(img/timg.jpg) no-repeat;
         	    background-size:100% 100% ;
 			}
