--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>每日总结</title>
 		<script src="" type="text/javascript" charset="utf-8"></script>
 		<style>
-		*{margin: 0;padding: 0;list-style: none;background-color: #010101;}
+		*{margin: 0;padding: 0;list-style: none;background-color:#010101 }
 		.top{
 			width: 100%;
 			height: 130px;
@@ -14,15 +14,28 @@
 			background-color: #010101;
 		}
 		.box{
-				width: 850px;
-				margin: 0 auto;
-				border: 3px solid black;
-				border-top:0 ;
-                border-radius:0 0 50px 50px;
-                height: 1200px;
-                background:url(img/timg.jpg) no-repeat;
-        	    background-size:100% 100% ;
+            width: 850px;
+            margin: 0 auto 80px;
+            border: 5px solid #010101;
+            border-top:0 ;
+            border-radius:0 0 50px 50px;
+            box-shadow: 0 0 80px #797c7f;
+            height: 800px;
+            background:url(img/timg.jpg) no-repeat;
+            background-size:100% 100% ;
 			}
+        .mian{
+        	width: 280px;
+        	height: auto;
+            float: left;
+            border: 3px solid #333;
+            border-radius: 7px;
+            box-shadow: 0 0 3px #333;
+            background-color: #fff7c8;
+            margin:20px 0 0 80px;
+            padding: 10px 0 0 20px;
+
+        }
         .mian>a{
             display: block;
             height: 30px;
@@ -37,18 +50,6 @@
         .mian>a:hover{
             text-decoration: underline;
         }
-        .mian{
-        	width: 280px;
-        	height: 170px;
-            float: left;
-            border: 3px solid #333;
-            border-radius: 7px;
-            box-shadow: 0 0 3px #333;
-            background-color: #fff7c8;
-            margin:30px 0 0 80px;
-            padding: 10px 0 0 20px;
-
-        }
         .mian>p{
             color:#343434;
             background-color:#fff7c8;
@@ -58,6 +59,7 @@
         	height: 30px;
         	background-color: #f7cdd1;
         }
+        /*background:url(img/timg.jpg) no-repeat;background-size: 100% 100%;*/
         li{
         	width: 150px;
         	text-align: center;
@@ -71,7 +73,12 @@
         	float: left;
         	cursor: pointer;
         }
-        
+        .mainBox1{
+            float: left;
+            width: 425px;
+            height: auto;
+            background-color: inherit;
+        }
 		</style>
 	</head>
 	<body>
@@ -83,43 +90,54 @@
 			  <li>2017/01/11</li>
 			  <li>2017/01/12</li>
             </ul>
-			<div class="mian">
-                <p >2017/01/09-周静雯-工具介绍总结</p>
-                <a href="HBuilder.html">1.HBuilder</a>
-                <a href="Mayun.html">2.码云</a>
-                <a href="GitHub.html">3.GitHub</a>
-            </div>
-            <div class="mian">
-                <p >2017/01/10 js回顾总结</p>
-                <a href="Month1Day10/base.html">1.JS基础</a>
-                <a href="Month1Day10/function.html">2.函数的声明</a>
-                <a href="Month1Day10/this.html">3.this指向</a>
-                <a href="Month1Day10/work.html">4.作用域</a>
-            </div>
-            <div class="mian">
-                <p >2017/01/11 原型与原型链</p>
-                <a href="proto.html">1.原型与原型链</a>
-            </div>
-            <div class="mian">
-                <p >2017/01/12 </p>
-                <a href="Month1Day12/event.html">1.JS Array,Event,排序回顾</a>
-                <a href="Month1Day12/error.html">2.Error对象</a>
-                <a href="Month1Day12/touch.html">3.触摸事件</a>
-            </div>
-            <div class="mian">
-                <p >2017/01/13 </p>
-                <a href="Month1Day13/Month1Day13canves.html">Canves 画布</a>
-            </div>
-            <div class="mian">
-            <p >2017/01/16 </p>
-            <a href="Month1Day16/Day16canves.html">1.Canves 续</a>
-            </div>
-            <div class="mian">
-                <p >2017/01/17 音频和视频 </p>
-                <a href="Month1Day17/audio.html">1.audio</a>
-                <a href="Month1Day17/video.html">2.video</a>
+            <div class="mainBox1">
+                <div class="mian">
+                    <p >2017/01/09-周静雯-工具介绍总结</p>
+                    <a href="HBuilder.html">1.HBuilder</a>
+                    <a href="Mayun.html">2.码云</a>
+                    <a href="GitHub.html">3.GitHub</a>
+                </div>
+                <div class="mian">
+                    <p >2017/01/11 原型与原型链</p>
+                    <a href="proto.html">1.原型与原型链</a>
+                </div>
+                <div class="mian">
+                    <p >2017/01/13 </p>
+                    <a href="Month1Day13/Month1Day13canves.html">Canves 画布</a>
+                </div>
+                <div class="mian">
+                    <p >2017/01/17 音频和视频 </p>
+                    <a href="Month1Day17/audio.html">1.audio</a>
+                    <a href="Month1Day17/video.html">2.video</a>
+                </div>
+                <div class="mian">
+                    <p >2017/02/6 音频和视频 </p>
+                    <a href="Month2Day6/ajax.html">1.AJAX</a>
+                    <a href="Month2Day6/http.html">2.AJAX补充</a>
+                </div>
             </div>
 
+
+            <div class="mainBox1">
+                <div class="mian">
+                    <p >2017/01/10 js回顾总结</p>
+                    <a href="Month1Day10/base.html">1.JS基础</a>
+                    <a href="Month1Day10/function.html">2.函数的声明</a>
+                    <a href="Month1Day10/this.html">3.this指向</a>
+                    <a href="Month1Day10/work.html">4.作用域</a>
+                </div>
+
+                <div class="mian">
+                    <p >2017/01/12 </p>
+                    <a href="Month1Day12/event.html">1.JS Array,Event,排序回顾</a>
+                    <a href="Month1Day12/error.html">2.Error对象</a>
+                    <a href="Month1Day12/touch.html">3.触摸事件</a>
+                </div>
+                <div class="mian">
+                    <p >2017/01/16 </p>
+                    <a href="Month1Day16/Day16canves.html">1.Canves 续</a>
+                </div>
+            </div>
 
 		</div>
 	</body>
