--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>每日总结</title>
-		<script src="" type="text/javascript" charset="utf-8"></script>
+		<!--<script src="" type="text/javascript" charset="utf-8"></script>-->
 		<style>
 		*{margin: 0;padding: 0;list-style: none;background-color:#010101 }
 		.top{
@@ -14,7 +14,7 @@
 			background-color: #010101;
 		}
 		.box{
-            width: 850px;
+            width: 900px;
             margin: 0 auto 80px;
             border: 5px solid #010101;
             border-top:0 ;
@@ -33,8 +33,7 @@
             box-shadow: 0 0 3px #333;
             background-color: #fff7c8;
             margin:20px 0 0 80px;
-            padding: 10px 0 0 20px;
-
+            padding: 10px 0 10px 20px;
         }
         .mian>a{
             display: block;
@@ -55,11 +54,10 @@
             background-color:#fff7c8;
         }
         ul{
-        	width: 850px;
+        	width: 900px;
         	height: 30px;
         	background-color: #f7cdd1;
         }
-        /*background:url(img/timg.jpg) no-repeat;background-size: 100% 100%;*/
         li{
         	width: 150px;
         	text-align: center;
@@ -90,6 +88,7 @@
 			  <li>2017/01/11</li>
 			  <li>2017/01/12</li>
             </ul>
+            <!--左部-->
             <div class="mainBox1">
                 <div class="mian">
                     <p >2017/01/09-周静雯-工具介绍总结</p>
@@ -111,13 +110,12 @@
                     <a href="Month1Day17/video.html">2.video</a>
                 </div>
                 <div class="mian">
-                    <p >2017/02/6 音频和视频 </p>
-                    <a href="Month2Day6/ajax.html">1.AJAX</a>
-                    <a href="Month2Day6/http.html">2.AJAX补充</a>
+                    <p >2017/02/7 </p>
+                    <a href="jQuery.html">jQuery</a>
                 </div>
             </div>
 
-
+            <!--右部-->
             <div class="mainBox1">
                 <div class="mian">
                     <p >2017/01/10 js回顾总结</p>
@@ -136,6 +134,12 @@
                 <div class="mian">
                     <p >2017/01/16 </p>
                     <a href="Month1Day16/Day16canves.html">1.Canves 续</a>
+                </div>
+                <div class="mian">
+                    <p >2017/02/6 AJAX </p>
+                    <a href="Month2Day6/ajax.html">1.AJAX</a>
+                    <a href="Month2Day6/http.html">2.AJAX补充</a>
+                    <a href="Month2Day6/ajax面试题.html">2.AJAX经典面试题</a>
                 </div>
             </div>
 
