--- a/Month2Day6/http.html
+++ b/Month2Day6/http.html
@@ -64,7 +64,7 @@
             color: #333;
             background-color:#f6f6f6;
             line-height: 2em;
-            padding-left: 20px;
+            text-indent: 2em;
             margin-bottom: 3px;
         }
     </style>
