--- a/Month2Day6/ajax面试题.html
+++ b/Month2Day6/ajax面试题.html
@@ -30,34 +30,18 @@
             font-family: "微软雅黑";
             color: #333;
             width: 100%;
-            line-height: 40px;
+            line-height: 30px;
+            text-indent: 2em;
             background-color: antiquewhite;
         }
-        .box>p:first-line{
+        .box>span{
+            font-size: 14px;
+            font-family: "微软雅黑";
+            color: #333;
+            width: 100%;
             font-weight: bold;
-        }
-        .box>code{
-            display: block;
-            height: auto;
-            width: 100%;
-            color: #333;
-            background-color:#f6f6f6;
-            line-height: 2em;
-            padding-left: 20px;
-            margin-bottom: 3px;
-        }
-        img{
-            max-width:800px ;
-        }
-        .box>pre{
-            display: block;
-            height: auto;
-            width: 100%;
-            color: #333;
-            background-color:#f6f6f6;
-            line-height: 2em;
-            padding-left: 20px;
-            margin-bottom: 3px;
+            line-height: 40px;
+            background-color: burlywood;
         }
     </style>
 </head>
@@ -65,20 +49,64 @@
 <body>
 <div class="box">
     <h1 style="background-color: antiquewhite;font-size: 28px">AJAX经典面试题</h1>
-    <p>1、什么是AJAX，为什么要使用Ajax（请谈一下你对Ajax的认识）</p>
-    <p>2、为什么要用ajax：</p>
-    <p>3、请介绍一下XMLhttprequest对象。</p>
-    <p>4、AJAX技术体系的组成部分有哪些。</p>
-    <p>5、AJAX应用和传统Web应用有什么不同</p>
-    <p>6、AJAX请求总共有多少种CALLBACK。</p>
-    <p>7、Ajax和JavaScript的区别。</p>
-    <p>8、在浏览器端如何得到服务器端响应的XML数据。</p>
-    <p>9、XMLHttpRequest对象在IE和Firefox中创建方式有没有不同。</p>
-    <p>10、介绍一下XMLHttpRequest对象的常用方法和属性。</p>
-    <p>11、什么是XML</p>
-    <p>12、XML的解析方式</p>
-    <p>13、AJAX的全称是什么？ 介绍一下AJAX？</p>
-    <p>14、AJAX都有哪些优点和缺点？</p>
+    <span>1、什么是AJAX，为什么要使用Ajax（请谈一下你对Ajax的认识）</span>
+    <p style="text-indent: 0">AJAX是“Asynchronous JavaScript and XML”的缩写。他是指一种创建交互式网页应用的网页开发技术。<br/>
+        Ajax包含下列技术：<br/>
+        基于web标准（standards-basedpresentation）XHTML+CSS的表示；<br/>
+        使用 DOM（Document ObjectModel）进行动态显示及交互；<br/>
+        使用 XML 和 XSLT 进行数据交换及相关操作；<br/>
+        使用 XMLHttpRequest 进行异步数据查询、检索；<br/>
+        使用 JavaScript 将所有的东西绑定在一起。
+    </p>
+    <span>2、为什么要用ajax：</span>
+    <p style="text-indent: 0">Ajax应用程序的优势在于：<br/>
+        1. 通过异步模式，提升了用户体验<br/>
+        2. 优化了浏览器和服务器之间的传输，减少不必要的数据往返，减少了带宽占用<br/>
+        3. Ajax引擎在客户端运行，承担了一部分本来由服务器承担的工作，从而减少了大量用户下的服务器负载。 </p>
+    <span>3、请介绍一下XMLhttprequest对象。</span>
+    <p>Ajax的核心是JavaScript对象XmlHttpRequest。该对象在Internet Explorer 5中首次引入，它是一种支持异步请求的技术。简而言之，XmlHttpRequest使您可以使用JavaScript向服务器提出请求并处理响应，而不阻塞用户。通过XMLHttpRequest对象，Web开发人员可以在页面加载以后进行页面的局部更新。</p>
+    <span>4、AJAX技术体系的组成部分有哪些。</span>
+    <p>HTML，css，dom，xml，xmlHttpRequest，javascript </p>
+    <span>5、AJAX应用和传统Web应用有什么不同</span>
+    <p>在传统的Javascript编程中，如果想得到服务器端数据库或文件上的信息，或者发送客户端信息到服务器，需要建立一个HTML form然后GET或者POST数据到服务器端。用户需要点击”Submit”按钮来发送或者接受数据信息，然后等待服务器响应请求，页面重新加载。因为服务器每次都会返回一个新的页面， 所以传统的web应用有可能很慢而且用户交互不友好。</p>
+    <p>使用AJAX技术， 就可以使Javascript通过XMLHttpRequest对象直接与服务器进行交互。通过HTTP Request， 一个web页面可以发送一个请求到web服务器并且接受web服务器返回的信息(不用重新加载页面)，展示给用户的还是通一个页面，用户感觉页面刷新，也看不到到Javascript后台进行的发送请求和接受响应。 </p>
+    <span>6、AJAX请求总共有多少种CALLBACK。</span>
+    <p>Ajax请求总共有八种Callback:onSuccess、onFailure、onUninitialized、onLoading、onLoaded、onInteractive、onComplete、onException </p>
+    <span>7、Ajax和JavaScript的区别。</span>
+    <p>javascript是一种在浏览器端执行的脚本语言，Ajax是一种创建交互式网页应用的开发技术 ，它是利用了一系列相关的技术其中就包括javascript。</P>
+    <P>Javascript是由网景公司开发的一种脚本语言，它和sun公司的java语言是没有任何关系的，它们相似的名称只是一种行销策略。在一般的web开发中，javascript是在浏览器端执行的，我们可以用javascript控制浏览器的行为和内容。</P>
+    <p>在 Ajax应用中信息是如何在浏览器和服务器之间传递的？通过XML数据或者字符串</p>
+    <span>8、在浏览器端如何得到服务器端响应的XML数据。</span>
+    <p>XMLHttpRequest对象的responseXMl属性 </p>
+    <span>9、XMLHttpRequest对象在IE和Firefox中创建方式有没有不同。</span>
+    <p>有，IE中通过new ActiveXObject()得到，Firefox中通过newXMLHttpRequest()得到 </p>
+    <span>10、介绍一下XMLHttpRequest对象的常用方法和属性。</span>
+    <p style="text-indent: 0">open(“method”,”URL”) 建立对服务器的调用，第一个参数是HTTP请求 方式可以为GET，POST或任何服务器所支持的您想调用的方式。第二个参数是请求页面的URL。<br/>
+
+        send()方法，发送具体请求<br/>
+        abort()方法，停止当前请求<br/>
+        readyState属性 请求的状态 有5个可取值0=未初始化 ，1=正在加载，2=以加载，3=交互中，4=完成<br/>
+        responseText属性 服务器的响应，表示为一个串<br/>
+        reponseXML 属性 服务器的响应，表示为XML<br/>
+        status 服务器的HTTP状态码，200对应ok，400对应not found </p>
+    <span>11、什么是XML</span>
+    <p>XML是扩展标记语言，能够用一系列简单的标记描述数据 </p>
+    <span>12、XML的解析方式</span>
+    <p>常用的用dom解析和sax解析。dom解析是一次性读取xml文件并将其构造为DOM对象供程序使用，优点是操作方便，但是比较耗内存。Sax是按事件驱动的方式解析的，占用内存少，但是编程复杂 </p>
+    <span>13、AJAX的全称是什么？ 介绍一下AJAX？</span>
+    <p>AJAX的全称是Asynchronous JavaScript And XML.AJAX是2005年由Google发起并流行起来的编程方法， AJAX不是一个新的编程语言，但是它是一个使用已有标准的新的编程技术。使用AJAX可以创建更好，更快，更用户界面友好的Web应用。AJAX技术基于Javascript和HTTP Request. </p>
+    <span>14、AJAX都有哪些优点和缺点？</span>
+    <p style="text-indent: 0">ajax的优点<br/>
+        1、最大的一点是页面无刷新，用户的体验非常好。<br/>
+        2、使用异步方式与服务器通信，具有更加迅速的响应能力。<br/>
+        3、可以把以前一些服务器负担的工作转嫁到客户端，利用客户端闲置的能力来处理，减轻服务器和带宽的负担，节约空间和宽带租用成本。并且减轻服务器的负担，ajax的原则是“按需取数据”，可以最大程度的减少冗余请求，和响应对服务器造成的负担。<br/>
+        4、基于标准化的并被广泛支持的技术，不需要下载插件或者小程序。<br/>
+        ajax的缺点<br/>
+        1、ajax不支持浏览器back按钮。<br/>
+        2、安全问题 AJAX暴露了与服务器交互的细节。<br/>
+        3、对搜索引擎的支持比较弱。<br/>
+        4、破坏了程序的异常机制。<br/>
+        5、不容易调试。 </p>
 </div>
 </body>
 </html>
