--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             border-top:0 ;
             border-radius:0 0 50px 50px;
             box-shadow: 0 0 80px #797c7f;
-            height: 800px;
+            height: 1000px;
             background:url(img/timg.jpg) no-repeat;
             background-size:100% 100% ;
 			}
@@ -113,6 +113,12 @@
                     <p >2017/02/7 </p>
                     <a href="jQuery.html">jQuery</a>
                 </div>
+                <div class="mian">
+                    <p >2017/02/8 jQuery </p>
+                    <a href="Month2Day8/jQueryProperty.html">1.jQuery 属性</a>
+                    <a href="Month2Day8/DOM.html">2.DOM</a>
+                    <a href="Month2Day8/jQueryDOM.html">3.jQuery 文档处理</a>
+                </div>
             </div>
 
             <!--右部-->
@@ -133,13 +139,13 @@
                 </div>
                 <div class="mian">
                     <p >2017/01/16 </p>
-                    <a href="Month1Day16/Day16canves.html">1.Canves 续</a>
+                    <a href="Month1Day16/Day16canves.html">Canves 续</a>
                 </div>
                 <div class="mian">
                     <p >2017/02/6 AJAX </p>
                     <a href="Month2Day6/ajax.html">1.AJAX</a>
                     <a href="Month2Day6/http.html">2.AJAX补充</a>
-                    <a href="Month2Day6/ajax面试题.html">2.AJAX经典面试题</a>
+                    <a href="Month2Day6/ajax面试题.html">3.AJAX经典面试题</a>
                 </div>
             </div>
 
