--- a/index.html
+++ b/index.html
@@ -147,8 +147,11 @@
                     <a href="Month2Day6/http.html">2.AJAX补充</a>
                     <a href="Month2Day6/ajax面试题.html">3.AJAX经典面试题</a>
                 </div>
+                <div class="mian">
+                    <p >2017/02/9 jQuery</p>
+                    <a href="Month2Day9.html">jQuery Event</a>
+                </div>
             </div>
-
 		</div>
 	</body>
 </html>
