--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             <div class="mainBox1">
                 <div class="mian">
                     <p style="color: crimson">2017/02/10 jQuery</p>
-                    <a href="Month2Day10.html">jQuery Animation</a>
+                    <a href="Month2Day10/Month2Day10.html">1.jQuery Animation</a>
+                    <a href="Month2Day10/test1.html">2.周考卷</a>
                 </div>
                 <div class="mian">
                     <p >2017/02/8 jQuery </p>
