--- a/Month2Day9.html
+++ b/Month2Day9.html
@@ -5,7 +5,7 @@
     <title>jQuery Event</title>
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <style>
-        *{margin: 0;padding: 0;background-color: #010101;}
+        *{margin: 0;padding: 0;background-color: #010101;cursor:url('mainmenu1.cur'),auto;color: #333;}
         .box{
             width: 900px;
             margin: 0 auto;
@@ -19,7 +19,6 @@
             font-size: 15px;
             font-weight: 600;
             font-family: "微软雅黑";
-            color: #333;
             height: 30px;
             line-height: 30px;
             width: 100%;
@@ -29,7 +28,6 @@
         .box>p{
             font-size: 15px;
             font-family: "微软雅黑";
-            color: #333;
             width: 100%;
             height: auto;
             font-weight: bold;
@@ -39,7 +37,6 @@
         span{
             font-size: 14px;
             font-family: "微软雅黑";
-            color: #333;
             width: 100%;
             line-height: 30px;
             background-color: antiquewhite;
@@ -49,7 +46,6 @@
             font-size: 15px;
             height: auto;
             width: 100%;
-            color: #333;
             background-color:#f6f6f6;
             line-height: 1.5em;
             margin-bottom: 3px;
