--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!--左部-->
             <div class="mainBox1">
                 <div class="mian">
-                    <p style="color: crimson">2017/02/10 jQuery</p>
+                    <p>2017/02/10 jQuery</p>
                     <a href="Month2Day10/Month2Day10.html">1.jQuery Animation</a>
                     <a href="Month2Day10/test1.html">2.周考卷</a>
                 </div>
@@ -136,6 +136,10 @@
 
             <!--右部-->
             <div class="mainBox1">
+                <div class="mian">
+                    <p  style="color: crimson">2017/02/13 jQuery</p>
+                    <a href="Month2Day13.html"  style="color: crimson">jQuery AJAX</a>
+                </div>
                 <div class="mian">
                     <p >2017/02/9 jQuery</p>
                     <a href="Month2Day9.html">jQuery Event</a>
